syntax = "proto3";

package com.v2ray.core.proxy.socks;
option go_package = "socks";

import "v2ray.com/core/common/net/address.proto";
import "v2ray.com/core/common/protocol/server_spec.proto";

message Account {
  string username = 1;
  string password = 2;
}

enum AuthType {
  NO_AUTH = 0;
  PASSWORD = 1;
}

message ServerConfig {
  AuthType auth_type = 1;
  map<string, string> accounts = 2;
  com.v2ray.core.common.net.AddressPB address = 3;
  bool udp_enabled = 4;
  uint32 timeout = 5;
}

message ClientConfig {
  repeated com.v2ray.core.common.protocol.ServerSpecPB server = 1;
}